# commotion-router

./: .config  .gitignore  .gitmodules  CMakeLists.txt  ImageBuilder.cmake  PackageBuilder.cmake  README.md  atheros-ar2315.config  atheros-ar2315.minimal.config  atheros.config  atheros.minimal.config  banner.in  clean-feed.sh  config  config-aa  config-aa-commotion  config-aa-commotion-modules  config-aa-dr1  config-aa-dr1-modules  config-aa-x86-commotion-package  config-known-good  config-no-collectd  feeds.conf  feeds.conf.in  ipkg-multi-index.sh  opkg.conf.in  repositories.conf.local.in  repositories.conf.remote.in  setup.sh  test  upgrade-builder.sh  x86.config
buildconfigs/: tl-wdr4300.config  unifi-indoor.config  unifi-outdoor.config
buildconfigs/buffalo-wzr-hp-ag300h/: .config  config  configure.sh
buildconfigs/buffalo-wzr-hp-ag300h/files/etc/config/: network
buildconfigs/buffalo-wzr-hp-g300nh/: .config  config  configure.sh
buildconfigs/buffalo-wzr-hp-g300nh/files/etc/config/: network
buildconfigs/mikrotik-RB411AH/: config
buildconfigs/mikrotik-RB411AH-install-image/: .config  config  configure.sh
buildconfigs/mikrotik-RB411AH-netboot-ramdisk/: .config  configure.sh
buildconfigs/tp-link-wdr4300/: config  configure.sh
buildconfigs/tp-link-wdr4300/files/etc/config/: network
commotionfeed/commotionbase/: Makefile
commotionfeed/commotionbase/files/etc/: banner
commotionfeed/commotionbase/files/etc/config/: dhcp  dropbear  firewall  mesh  olsrd
commotionfeed/commotionbase/files/etc/hotplug.d/iface/: 00-services_predown  99-services_postup
commotionfeed/commotionbase/files/etc/hotplug.d/services/: 20-olsrd  30-dnsmasq  40-splash  99-firewall
commotionfeed/commotionbase/files/etc/init.d/: meshconfig  node
commotionfeed/commotionbase/files/etc/meshconfig/default/: default
commotionfeed/commotionbase/files/etc/meshconfig/detroit/default/: dhcp  firewall
commotionfeed/commotionbase/files/etc/uci-defaults/: commotionbase  commotionluci  disable-services.sh
commotionfeed/commotionbase/files/lib/functions/: meshconfig.sh
commotionfeed/commotionbase/files/lib/network/: commotion.sh  mesh.sh
commotionfeed/commotionbase/files/lib/wifi/: mac80211.sh
commotionfeed/commotionbase/files/usr/share/commotion/patches/: dnsmasq.patch  luci-admin.patch  luci-splash_fix-dropped-clients.diff  luci_splash.patch  remote-update.patch  wpa-none.patch
commotionfeed/luci-commotion/: Makefile
commotionfeed/luci-commotion/files/etc/uci-defaults/: luci-commotion
commotionfeed/luci-commotion/files/usr/share/commotion/files/: olsr-viz.sh
commotionfeed/luci-commotion/htdocs/luci-static/: commotion_index.html
commotionfeed/luci-commotion/ipkg/: postinst
commotionfeed/luci-commotion/luasrc/controller/commotion/: commotion.lua
commotionfeed/luci-commotion/luasrc/model/cbi/admin_network/: proto_apif.lua  proto_meshif.lua  proto_plugif.lua
commotionfeed/luci-commotion/luasrc/model/cbi/commotion/: frontpage.lua  meshconfig.lua  meshprofile.lua  upgrade.lua
commotionfeed/luci-commotion/luasrc/model/network/: proto_commotion.lua
commotionfeed/luci-commotion/luasrc/view/commotion/: splash.htm
commotionfeed/luci-theme-commotion/: Makefile
commotionfeed/luci-theme-commotion/files/htdocs/: cascade.css
commotionfeed/luci-theme-commotion/files/htdocs/icons/.svn/: all-wcprops  entries
commotionfeed/luci-theme-commotion/files/templates/: footer.htm  header.htm
commotionfeed/luci-theme-commotionClassic/: Makefile
commotionfeed/luci-theme-commotionClassic/files/htdocs/: cascade.css
commotionfeed/luci-theme-commotionClassic/files/templates/: footer.htm  header.htm
commotionfeed/rng-tools/: Makefile
commotionfeed/rng-tools/.svn/: entries
commotionfeed/rng-tools/files/.svn/: entries
commotionfeed/rng-tools/files/.svn/text-base/: rngd.init.svn-base
configs/buffalo-wzr-hp-ag300h/: CMakeLists.txt
configs/buffalo-wzr-hp-g300nh/: CMakeLists.txt
configs/buffalo-wzr-hp-g300nh/files/etc/config/: network
configs/mikrotik-rb411ah/: CMakeLists.txt
configs/tp-link-wdr4300/: CMakeLists.txt
configs/tp-link-wdr4300/files/etc/config/: network
configs/ubnt/: CMakeLists.txt
configs/ubnt/files/etc/config/: network
default-files/etc/: babeld.conf  banner  cli  profile  shadow  sysupgrade.conf
default-files/etc/avahi/: avahi-daemon.conf
default-files/etc/commotion/profiles.d/: RHIAP  RHIMesh
default-files/etc/config/: applications  babeld  dhcp  firewall  luci_statistics  network  olsrd  system  uhttpd  wireless
default-files/etc/hotplug.d/iface/: 20-olsrd  30-dnsmasq  40-babeld  40-olsrd  90-thisnode
default-files/etc/init.d/: dnsmasq
default-files/etc/nodogsplash/: nodogsplash.conf
default-files/etc/uci-defaults/: add_vpn  add_wifi
default-files/usr/share/commotion/patches/: n2n.patch
files/etc/: banner  passwd  rc.local  sysctl.conf  sysupgrade.conf
files/etc/config/: applications  dhcp  firewall  mesh  network  olsrd  uhttpd
files/etc/dropbear/: authorized_keys
files/etc/hotplug.d/iface/: 40-olsrd  90-thisnode
files/etc/init.d/: node  node_init
files/etc/meshconfig/detroit/default/: network  olsrd
files/etc/nodogsplash/: nodogsplash.conf
files/lib/network/: mesh.sh
openwrt/: .config
patches/: 010-iface_name_len.patch  010-initialize_vars_fix.patch  010-remove_exec.patch  640-store_freq_ibss.patch  650-ibss_rsn_send_auth.patch  660-ibss_auth_register.patch  890_ath9k_advertize_beacon_int_infra_match.patch  891_ath9k_htc_advertize_allowed_vif_combinations.patch  892_ath9k_htc_remove_interface_combination_specific_checks.patch  893_mac80211_add_supported_rates_change_notification_ibss.patch  894_ath9k_htc_implement_sta_rc_update_mac80211_callback.patch  900-leds-gpio-asm-include.patch  901-remove-irqf-sample-random.patch  910-fix-out-of-bounds-index.patch  backport_compat_wireless_09-07-12.patch  backport_kernel_3.3.8.patch  delete_AR933X_WMAC_reset_code.patch  unifi.patch  wpa_supplicant-mini.config.patch
